# geo-config

./: .editorconfig  .python-version  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
geo_config/: __init__.py  config.py  csrf.py  ext.py  version.py
geo_config/security/: __init__.py  generators.py  permissions.py  policies.py
geo_config/security/generators/: __init__.py  conditional.py  roles.py
tests/: conftest.py  test_geo_config.py
